plug-ins releases: fix Other changes header level

--- a/_posts/plugins/releases/2015-10-29-plugins-v2.10.1-201510291730-released.md
+++ b/_posts/plugins/releases/2015-10-29-plugins-v2.10.1-201510291730-released.md
@@ -48,7 +48,7 @@ Version 2.10.1-201510291730 is a new release; the main improvements are: suppor
 * the **STM32F4 HAL** was updated to v1.9.0;
 * the implementation of `assert_failed()` was made `weak`, to allow redefinitions.
 
-### Other changes
+## Other changes
 
 * part of the **µOS++ III** code used by the templates (ARM Core, STM32F4 CMSIS, STM32F4 HAL) was migrated to separate packages, available in the GitHub project [xPacks](https://github.com/xpacks). Eventually the entire dependency on **µOS++ III** will be migrated to separate packages.
 
