--- a/_posts/plugins/releases/2015-11-06-plugins-v2.10.2-201511061603-released.md
+++ b/_posts/plugins/releases/2015-11-06-plugins-v2.10.2-201511061603-released.md
@@ -38,7 +38,7 @@ Version 2.10.2-201511061603 is a maintenance release, intended to improve the fl
 
 * in certain conditions, the linker complained about a missing symbol (`__dso_handle`); added as weak to `_syscalls.c`.
 
-### Other changes
+## Other changes
 
 * none.
 
