--- a/_posts/plugins/releases/2015-12-17-plugins-v2.11.1-201512141335-released.md
+++ b/_posts/plugins/releases/2015-12-17-plugins-v2.11.1-201512141335-released.md
@@ -38,7 +38,7 @@ Version 2.11.1-201512141335 is a new release; the main improvements are: templat
 
 * in certain conditions, the STM32F7 template had problems with F745 projects; fixed;
 
-### Other changes
+## Other changes
 
 * none.
 
