--- a/_posts/plugins/releases/2016-02-09-plugins-v2.11.2-201602091039-released.md
+++ b/_posts/plugins/releases/2016-02-09-plugins-v2.11.2-201602091039-released.md
@@ -32,7 +32,7 @@ Version 2.11.2-201602091039 is a maintenance release; the STM templates were upd
 
 * in _exit.c the prototype of __reset_hardware() is defined only on Release.
 
-### Other changes
+## Other changes
 
 * none.
 
