--- a/_posts/plugins/releases/2016-02-10-plugins-v2.11.3-201602101653-released.md
+++ b/_posts/plugins/releases/2016-02-10-plugins-v2.11.3-201602101653-released.md
@@ -27,7 +27,7 @@ Version 2.11.3-201602101653 is a maintenance release, intended to fix a bug intr
 
 * [[Issue:#65](https://github.com/gnuarmeclipse/plug-ins/issues/65)] during project creation, sometimes functions from the templates.core plugin were invoked before the plug-in was properly initialised, and project creation failed with an exception; fixed by enabling lazy activation for the templates.core plug-in.
 
-### Other changes
+## Other changes
 
 * none.
 
