--- a/_posts/plugins/releases/2016-04-19-plugins-v2.12.1-201604190915-released.md
+++ b/_posts/plugins/releases/2016-04-19-plugins-v2.12.1-201604190915-released.md
@@ -34,7 +34,7 @@ Version 2.12.1-201604190915 is a new release; the main change is the addition of
 * [[pull:#91](https://github.com/gnuarmeclipse/plug-ins/pull/91)/[#90](https://github.com/gnuarmeclipse/plug-ins/issues/90)] in certain conditions, the Apply button in the Toolchains tab did not save the page content; fixed.
 * [[pull:#107](https://github.com/gnuarmeclipse/plug-ins/pull/107)/[#106](https://github.com/gnuarmeclipse/plug-ins/issues/106)] in certain conditions, after removing a plug-in implementing a specific toolchain, the Settings page became invalid and could not be opened; fixed, in order to fix the project configuration, now the settings page opens for projects having non-existing toolchains.
 
-### Other changes
+## Other changes
 
 * none.
 
