--- a/_posts/plugins/releases/2017-01-14-plugins-v3.2.1-201701141320-released.md
+++ b/_posts/plugins/releases/2017-01-14-plugins-v3.2.1-201701141320-released.md
@@ -48,7 +48,7 @@ Version 3.2.1-201701141320 is a new release; the main change is adding support f
 * the stm32f4 template was updated to use Cube HAL v1.12.0
 * the stm32f4 template was extended to support 412Cx, 412Rx, 412Vx, 412Zx
 
-### Other changes
+## Other changes
 
 * for consistency reasons, the compiler tools names were slightly changed to include GNU (for example **Cross ARM GNU C Compiler**)
 
