--- a/_posts/plugins/releases/2017-02-25-plugins-v3.3.1-201702251311-released.md
+++ b/_posts/plugins/releases/2017-02-25-plugins-v3.3.1-201702251311-released.md
@@ -45,7 +45,7 @@ Version 3.3.1-201702251311 is a new release; the main change is adding support f
 
 * none.
 
-### Other changes
+## Other changes
 
 * none.
 
