--- a/_posts/plugins/releases/2017-04-30-plugins-v3.4.1-201704251808-released.md
+++ b/_posts/plugins/releases/2017-04-30-plugins-v3.4.1-201704251808-released.md
@@ -43,7 +43,7 @@ Version 3.4.1-201704251808 is a maintenance release, intended to update the plug
 * [[Issue:#153](https://github.com/gnuarmeclipse/plug-ins/issues/153)] the `raise()` & `kill()` functions generated for semihosting configurations were marked as `weak` to alow redefinition;
 * [[Issue:#159](https://github.com/gnuarmeclipse/plug-ins/issues/159)] the configurations created by the project wizards included tracing definitions even for the Release configurations; these definitions were removed, and `NDEBUG` was explicitly added to Release configurations to disable asserts.
 
-### Other changes
+## Other changes
 
 * the update sites are currently migrated from SourceForge to [Bintray](https://bintray.com/gnuarmeclipse/updates); the public URL remains the same (`http://gnuarmeclipse.sourceforge.net/updates`) and will be automatically redirected to the new server; the full transition is expected to be complete by May 1st, 2017;
 * the build scripts were updated to use SHA to compute the checksums for the generated binaries.
