--- a/_posts/plugins/releases/2016-06-21-plugins-v3.1.1-201606210758-released.md
+++ b/_posts/plugins/releases/2016-06-21-plugins-v3.1.1-201606210758-released.md
@@ -31,7 +31,7 @@ Version 3.1.1-201606210758 is a new major release; the main change is adding sup
 
 * none.
 
-### Other changes
+## Other changes
 
 * the minimum supported version is now CDT **8.6.0** from **Luna SR2**; Eclipse Kepler and previous are no longer supported;
 * the minimum Java version required is **JavaSE-1.7**.
